Update docker image yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,9 +30,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app-name:latest .
+- name: Build Docker image
+  run: |
+    docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app-name:latest ./frontend
 
       - name: Push Docker image to Docker Hub
         run: |
